compiler/testData/cli/jvm/firSyntaxError.out
compiler/testData/cli/jvm/firSyntaxError.kt:1:10: error: syntax error: Expecting '}'.
fun a() {
         ^
COMPILATION_ERROR
